--- a/pizza.html
+++ b/pizza.html
@@ -20,7 +20,7 @@
 
         .card-title {
             color: white;
-            background-color: black;
+            background-color: brown;
             display: inline-block;
             border-radius: 5px;
             padding: 5px 15px 5px 15px;
